# wch-sdk

./: .clangd  .gitignore  .gitmodules  LICENSE  README.md  bootstrap.sh  install_toolchains.sh  wch_init.cmake
cmake/: chip.cmake  cmake.old  config.cmake  use_lib.cmake
configure/ch32v003/: ch32v00x_conf.h  ch32v00x_it.c
configure/ch32v307/: FreeRTOSConfig.h.in  FreeRTOSConfig.h.in2  LinkRtos.ld  ch32v30x_it.c  ch32v30x_it.h  port.c  system_ch32v30x.c  system_ch32v30x.h
configure/ch592/: enable_cpp.c
configure/gcc/: implemented.c
example/ble_easy_peripheral/: CMakeLists.txt  README.md
example/ble_easy_peripheral/include/: ble_peripheral_controller.hpp
example/ble_easy_peripheral/src/: main.cpp
example/ble_uart/: CMakeLists.txt  README.md
example/ble_uart/include/: app_drv_fifo.h  ble_uart_service.h  devinfoservice.h  gattprofile.h  peripheral.h
example/ble_uart/src/: ble_uart_service_16bit.c  devinfoservice.c  gattprofile.c  main.cpp  peripheral.c  peripheral_main.c
example/ch32v307/rtos/: CMakeLists.txt
example/ch32v307/tflite/hello_world/: CMakeLists.txt
example/ch32v307/tflite/hello_world/include/: tflite_use.hpp
example/ch32v307_rtos/: CMakeLists.txt
example/ch32v307_rtos/include/: FreeRTOSConfig.h
example/ch32v307_tflite/: CMakeLists.txt
example/ch32v307_tflite/include/: FreeRTOSConfig.h  model.hpp  tflite_use.hpp
example/ch32v307_tflite/src/: main.cpp
example/hello_world/: CMakeLists.txt
example/hello_world/src/: main.cpp
example/hello_world_no_cpp/: CMakeLists.txt  README.md
example/hello_world_no_cpp/src/: main.c
example/micropython/: CMakeLists.txt
example/micropython/src/: main.c
example/rf_phy_rx/: CMakeLists.txt
example/rf_phy_rx/src/: main.cpp
example/rf_phy_tx/: CMakeLists.txt
example/rf_phy_tx/src/: main.cpp
example/rtos/: CMakeLists.txt  README.md
example/rtos/src/: main.cpp
example/tflite/hello_world/: CMakeLists.txt  README.md
example/tflite_hello_world/: CMakeLists.txt  README.md
example/tflite_hello_world/src/: main.cpp
example/tflite_minst/: CMakeLists.txt  README.md
example/tflite_minst/src/: main.cpp
hal/CH32V307/: Link.ld  startup_ch32v30x_D8C.S
hal/CH32V307/config/: startup_ch32v30x_D8.S  startup_ch32v30x_D8C.S
hal/CH32V307/include/: ch32v30x.h  ch32v30x_flash.h  ch32v30x_gpio.h  ch32v30x_usb.h  debug.h
hal/CH32V307/src/: ch32v30x_flash.c  ch32v30x_gpio.c  ch32v30x_it.c  ch32v30x_iwdg.c  ch32v30x_rcc.c  ch32v30x_usart.c  core_riscv.c  debug.c  system_ch32v30x.c
hal/CH58X/: startup_CH583.S
hal/CH58X/include/: CH58xBLE_LIB.h  CH58x_clk.h  CH58x_common.h  CH58x_i2c.h  config.h  printf.h
hal/CH58X/src/: CH58x_clk.c
hal/ch32v307/: base.cpp
hal/ch592/: base.cpp  base.h  i2c.cpp  rf_controller.cpp  usb_cdc.cpp  vl53l0x.cpp
hal/ch592/ble/: ble_controller.hpp  rf_controller.h
hal/ch592/peripherals/: i2c.h  usb_cdc.h
hal/ch592/sensor/: vl53l0x.h
libs/log/: wch_log.hpp
libs/utensil/: utensil.hpp
libs/utensil/ble/: ble_controller.hpp  ble_peripheral_controller.hpp
libs/utensil/freertos/: utensil_rtos.hpp
libs/utensil/lvgl/: lv_conf.h
(+19 files in other folders)
